crates/wit-pack/src/py/snapshots/wit_pack__py__tests__generated_files-2.snap
---
source: crates/wit-pack/src/py/mod.rs
expression: "files[\"MANIFEST.in\"].utf8_contents().unwrap()"
---
include wit_pack/py.typed
include wit_pack/bindings/wit_pack/*.wasm
include wit_pack/commands/*.wasm
