crates/wit-pack/src/py/snapshots/wit_pack__py__tests__generated_files-3.snap
---
source: crates/wit-pack/src/py/mod.rs
expression: "files[\"wit_pack/__init__.py\"].utf8_contents().unwrap()"
---
'''
Bindings to wasmer/wit-pack v1.2.3.
'''

from wasmer import Store # type: ignore
from .commands import Commands
from .bindings import Bindings

__version__ = "1.2.3"

class WitPack:
    """
    The "wasmer/wit-pack" package.
    """

    def __init__(self):
        self.store = Store()
        self._bindings = Bindings(self.store)
        self._commands = Commands(self.store)
    @property
    def commands(self):
        """
        The WASI executables in this package.
        """
        return self._commands
    @property
    def bindings(self):
        """
        Bindings to the libraries in this package.
        """
        return self._bindings
