crates/wit-pack/src/py/snapshots/wit_pack__py__tests__generated_files.snap
---
source: crates/wit-pack/src/py/mod.rs
expression: "files[\"pyproject.toml\"].utf8_contents().unwrap()"
---
[project]
name = "wit_pack"
version = "1.2.3"
keywords = []
dependencies = ["wasmer", "wasmer_compiler_cranelift"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

